[gd_scene load_steps=2 format=3 uid="uid://bypk1p0htnogy"]

[ext_resource type="Script" uid="uid://h2l75q74123t" path="res://scenes/menu.gd" id="1_lti8b"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start_Button" type="Button" parent="Button_Manager"]
layout_mode = 0
offset_left = 500.0
offset_top = 93.0
offset_right = 700.0
offset_bottom = 173.0
text = "START"

[node name="Options_Button" type="Button" parent="Button_Manager"]
layout_mode = 0
offset_left = 500.0
offset_top = 224.0
offset_right = 700.0
offset_bottom = 304.0
text = "OPTIONS"

[node name="Quit_Button" type="Button" parent="Button_Manager"]
layout_mode = 0
offset_left = 500.0
offset_top = 353.0
offset_right = 700.0
offset_bottom = 433.0
text = "QUIT"

[connection signal="pressed" from="Button_Manager/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Button_Manager/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Button_Manager/Quit_Button" to="." method="_on_quit_button_pressed"]
